fixed where large todos were overflowing from the card component

--- a/Frontend Intern Assignment/src/App.css
+++ b/Frontend Intern Assignment/src/App.css
@@ -17,6 +17,8 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 
+
+
 }
 
 h1 {
@@ -27,7 +29,7 @@ h1 {
 form {
     display: flex;
     justify-content: space-between;
-
+    flex-wrap: wrap;
     gap: 10px;
 
 }
@@ -49,10 +51,10 @@ form button {
     box-sizing: border-box;
 
 }
-
-@media (max-width: 600px) {
-    .card {
-        width: 100%;
-    }
+hr {
+    border: none;
+    border-top: 1px solid #ccc;
+    margin: 20px 0;
 }
+
 
