--- a/Frontend Intern Assignment/src/CSS/Checkbox.css
+++ b/Frontend Intern Assignment/src/CSS/Checkbox.css
@@ -9,6 +9,7 @@
     cursor: pointer;
     font-size: 25px;
     user-select: none;
+    flex-wrap: wrap;
 
 }
 
