--- a/Frontend Intern Assignment/src/CSS/TodoRow.css
+++ b/Frontend Intern Assignment/src/CSS/TodoRow.css
@@ -6,7 +6,9 @@
 
     align-items: center;
     padding: 10px 0;
-    /*border-bottom: 1px solid #ddd;*/
+    word-wrap: break-word;
+    overflow: auto;
+
 }
 
 
